added getters & setters added comments added saving to storage as files users are saved as folder names & habits are saved as files